Fix H1 font size on mobile.

--- a/pychronia_common/static/MetalRadiance/metalradiance.css
+++ b/pychronia_common/static/MetalRadiance/metalradiance.css
@@ -2334,7 +2334,6 @@ body .notification_panel .notification_panel_decorations .notification_panel_con
     text-decoration: none;
   }
   #full_content h1 {
-    font-size: 20px;
     color: #fecd2b;
     text-decoration: none;
     padding: 0px 10px;
