--- a/pychronia_common/static/MetalRadiance/scss/_layout_mobile.scss
+++ b/pychronia_common/static/MetalRadiance/scss/_layout_mobile.scss
@@ -140,7 +140,6 @@ body {
         text-decoration: none;
     }
     h1 {
-        font-size: 20px;
         color: #fecd2b;
         text-decoration: none;
         padding: 0px 10px;
